added links cards to album artist to artist

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    
 
     .cardtext {
-      color: #797979;
+      color: white;
       font-size: smaller;
     }
 
@@ -224,7 +224,9 @@ h5.card-title{
     <h3 class="m-4">Good morning</h3>
 
 <div class="container-fluid d-flex justify-content-start flex-wrap ">
-  <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px;" >
+
+  <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px; max-height: 80px;" >
+    <a href="./album.html" style="text-decoration: none; color: white;">
     <div class="row">
       <div class="col-md-4">
         <img src="./assets-home/placeholder_liked.png" style="max-width: 80px;" alt="...">
@@ -237,9 +239,11 @@ h5.card-title{
       </div>
       </div>
     </div>
+  </a>
   </div>
 
   <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px; max-height: 80px;">
+    <a href="./album.html" style="text-decoration: none; color: white;">
     <div class="row">
       <div class="col-md-4">
         <img src="./assets-home/placeholder.png" alt="...">
@@ -252,9 +256,11 @@ h5.card-title{
       </div>
       </div>
     </div>
+  </a>
   </div>
 
-  <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px;">
+  <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px; max-height: 80px;">
+    <a href="./album.html" style="text-decoration: none; color: white;">
     <div class="row">
       <div class="col-md-4">
         <img src="./assets/album.jpg" style="max-width: 80px;" alt="...">
@@ -267,9 +273,11 @@ h5.card-title{
       </div>
       </div>
     </div>
+  </a>
   </div>
 
-  <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px;">
+  <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px; max-height: 80px;">
+    <a href="./album.html" style="text-decoration: none; color: white;">
     <div class="row">
       <div class="col-md-4">
         <img src="./assets-home/placeholder.png" alt="..." style="max-width: 80px;">
@@ -282,9 +290,11 @@ h5.card-title{
       </div>
       </div>
     </div>
+  </a>
   </div>
 
-  <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px;">
+  <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px; max-height: 80px;">
+    <a href="./album.html" style="text-decoration: none; color: white;">
     <div class="row">
       <div class="col-md-4">
         <img src="./assets-home/placeholder.png" alt="...">
@@ -297,9 +307,11 @@ h5.card-title{
       </div>
       </div>
     </div>
+  </a>
   </div>
 
-  <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px;">
+  <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px; max-height: 80px;">
+    <a href="./album.html" style="text-decoration: none; color: white;">
     <div class="row">
       <div class="col-md-4">
         <img src="./assets/album.jpg" alt="..." style="max-width: 80px;">
@@ -312,10 +324,12 @@ h5.card-title{
       </div>
       </div>
     </div>
+  </a>
   </div>
 
 
-  <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px;">
+  <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px; max-height: 80px;">
+    <a href="./album.html" style="text-decoration: none; color: white;">
     <div class="row">
       <div class="col-md-4">
         <img src="./assets-home/placeholder.png" alt="...">
@@ -328,9 +342,11 @@ h5.card-title{
       </div>
       </div>
     </div>
+  </a>
   </div>
 
-  <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px;">
+  <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px; max-height: 80px;">
+    <a href="./album.html" style="text-decoration: none; color: white;">
     <div class="row">
       <div class="col-md-4">
         <img src="./assets/album-2.jpg" alt="..." style="max-width: 80px;">
@@ -343,6 +359,7 @@ h5.card-title{
       </div>
       </div>
     </div>
+  </a>
   </div>
 
 
@@ -365,8 +382,9 @@ h5.card-title{
     <div class="card-body">
       <h6 class="card-title">Django Soundtrack</h6>
       <div class="play-btn-2 "></div>
-
-      <p class="cardtext">Some quick example text.</p>
+      <a href="./artist-page.html" style="text-decoration-color: white;">
+      <p class="cardtext">Some Great Arist!</p>
+      </a>
      </div>
   </div>
   <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
@@ -374,8 +392,9 @@ h5.card-title{
     <div class="card-body">
       <h6 class="card-title">Hulla Hop Boyz N Girlz</h6>
       <div class="play-btn-2 "></div>
-
-      <p class="cardtext">Some quick example text.</p>
+      <a href="./artist-page.html" style="text-decoration-color: white;">
+      <p class="cardtext">Some Great Artist</p>
+      </a>
      </div>
   </div>
   <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
@@ -383,8 +402,9 @@ h5.card-title{
     <div class="card-body">
       <h6 class="card-title">Bla Bla Blub</h6>
       <div class="play-btn-2 "></div>
-
-      <p class="cardtext">Some quick example text.</p>
+      <a href="./artist-page.html" style="text-decoration-color: white;">
+      <p class="cardtext">Some Great Artist</p>
+      </a>
      </div>
   </div>
    <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
@@ -392,8 +412,9 @@ h5.card-title{
           <div class="card-body">
             <h6 class="card-title">Liked Songs</h6>
             <div class="play-btn-2 "></div>
-
-            <p class="cardtext">Some quick example text.</p>
+            <a href="./artist-page.html" style="text-decoration-color: white;">
+            <p class="cardtext">Some Great Artist</p>
+            </a>
            </div>
         </div>
         <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
@@ -401,8 +422,9 @@ h5.card-title{
           <div class="card-body">
             <h6 class="card-title">Hello World!</h6>
             <div class="play-btn-2 "></div>
-
-            <p class="cardtext">Some quick example text.</p>
+            <a href="./artist-page.html" style="text-decoration-color: white;">
+            <p class="cardtext">Some Great Artist</p>
+            </a>
            </div>
         </div>
         <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
@@ -410,8 +432,9 @@ h5.card-title{
           <div class="card-body">
             <h6 class="card-title">Doggos Psy Trance</h6>
             <div class="play-btn-2 "></div>
-
-            <p class="cardtext">Some quick example text.</p>
+            <a href="./artist-page.html" style="text-decoration-color: white;">
+            <p class="cardtext">Some Great Artist</p>
+            </a>
            </div>
         </div>
         <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
@@ -419,8 +442,9 @@ h5.card-title{
           <div class="card-body">
             <h6 class="card-title">Welcome To The Jumbotron</h6>
             <div class="play-btn-2 "></div>
-
-            <p class="cardtext">Some quick example text.</p>
+            <a href="./artist-page.html" style="text-decoration-color: white;">
+            <p class="cardtext">Some Great Artist</p>
+            </a>
            </div>
         </div>
         
@@ -445,8 +469,9 @@ h5.card-title{
     <div class="card-body">
       <h6 class="card-title">Striving For Excellence</h6>
       <div class="play-btn-2 "></div>
-
-      <p class="cardtext">Some quick example text.</p>
+      <a href="./artist-page.html" style="text-decoration-color: white;">
+      <p class="cardtext">Some Great Artist</p>
+      </a>
      </div>
   </div>
 
@@ -455,8 +480,9 @@ h5.card-title{
     <div class="card-body">
       <h6 class="card-title">Best Of Rock 1977</h6>
       <div class="play-btn-2 "></div>
-
-      <p class="cardtext">Some quick example text.</p>
+      <a href="./artist-page.html" style="text-decoration-color: white;">
+      <p class="cardtext">Some Great Artist</p>
+      </a>
      </div>
   </div>
   <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
@@ -464,8 +490,9 @@ h5.card-title{
     <div class="card-body">
       <h6 class="card-title">Best Of Folk 1585</h6>
       <div class="play-btn-2 "></div>
-
-      <p class="cardtext">Some quick example text.</p>
+      <a href="./artist-page.html" style="text-decoration-color: white;">
+      <p class="cardtext">Some Great Artist</p>
+      </a>
      </div>
   </div>
   <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
@@ -473,8 +500,9 @@ h5.card-title{
     <div class="card-body">
       <h6 class="card-title">Coding Music</h6>
       <div class="play-btn-2 "></div>
-
-      <p class="cardtext">Some quick example text.</p>
+      <a href="./artist-page.html" style="text-decoration-color: white;">
+      <p class="cardtext">Some Great Artist</p>
+      </a>
      </div>
   </div>
    
@@ -483,8 +511,9 @@ h5.card-title{
           <div class="card-body">
             <h6 class="card-title">We Love to Entertain You</h6>
             <div class="play-btn-2 "></div>
-
-            <p class="cardtext">Some quick example text.</p>
+            <a href="./artist-page.html" style="text-decoration-color: white;">
+            <p class="cardtext">Some Great Artist</p>
+            </a>
            </div>
         </div>
         <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
@@ -492,8 +521,9 @@ h5.card-title{
           <div class="card-body">
             <h6 class="card-title">Sunshine In Your Eyes</h6>
             <div class="play-btn-2 "></div>
-
-            <p class="cardtext">Some quick example text.</p>
+            <a href="./artist-page.html" style="text-decoration-color: white;">
+            <p class="cardtext">Some Great Artist</p>
+            </a>
            </div>
         </div>
       
@@ -502,8 +532,9 @@ h5.card-title{
           <div class="card-body">
             <h6 class="card-title">Buy Bitcoin</h6>
             <div class="play-btn-2 "></div>
-
-            <p class="cardtext">Some quick example text.</p>
+            <a href="./artist-page.html" style="text-decoration-color: white;">
+            <p class="cardtext">Some Great Artist</p>
+            </a>
            </div>
         </div>
 
