--- a/support.html
+++ b/support.html
@@ -8,7 +8,11 @@
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Support Page</title>
+
+    <link rel = "icon" href = 
+"https://cdn3.iconfinder.com/data/icons/popular-services-brands/512/spotify-512.png" 
+        type = "image/x-icon">
 
     <link rel="stylesheet" href="supportStyle.css">
   </head>
