--- a/index.html
+++ b/index.html
@@ -245,12 +245,14 @@ h5.card-title{
   </div>
 
   <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px; max-height: 80px;">
-    <a href="./album.html" style="text-decoration: none; color: white;">
+    <a  style="text-decoration: none; color: white;">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 " id="album">
         <img src="./assets-home/placeholder.png" alt="...">
+        <audio id="audio" src="./Queen - Bohemian Rhapsody.mp3"></audio>
+
       </div>
-      <div class="col-md-8">
+      <div class="col-md-8" >
         <div class="card-body">
           <h5 class="card-title">Burning Jazz</h5>
           <div class="play-btn "></div>
@@ -260,6 +262,18 @@ h5.card-title{
     </div>
   </a>
   </div>
+
+
+  <!---
+  
+  <div class="col-md-4" id="album">
+                <img src="./assets-home/placeholder.png" alt="...">
+                <audio id="audio" src="./Queen - Bohemian Rhapsody.mp3"></audio>
+
+              </div>
+  
+  
+  -->
 
   <div class="card mb-3 op mx-3 " style="min-width: 230px; max-width: 280px; max-height: 80px;">
     <a href="./album.html" style="text-decoration: none; color: white;">
