--- a/support.html
+++ b/support.html
@@ -18,6 +18,34 @@
   </head>
   <body>
 
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <img id="navLogo" src="Spotify_Logo_RGB_White.png">
+        
+        <div class="collapse navbar-collapse mr-sm-2" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a id="listItem" class="nav-link" href="#">Premium</a>
+            </li>
+            <li class="nav-item">
+              <a id="listItem" class="nav-link" href="#">Support</a>
+            </li>
+            <li class="nav-item">
+                <a id="listItem" class="nav-link" href="#">Download</a>
+              </li>
+              <li class="nav-item">
+                <a id="listItem" class="nav-link" href="#">|</a>
+              </li>
+              <li class="nav-item">
+                <a id="listItem" class="nav-link" href="#">Sign up</a>
+              </li>
+              <li class="nav-item">
+                <a id="listItem" class="nav-link" href="#">Log in</a>
+              </li>
+            
+          </ul>
+        </div>
+      </nav>
+
     <div id="help">
         <p id="title">How can we help you?</p>
         <svg id="searchIcon" xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-search" viewBox="0 0 16 16">
