stop songs functions

--- a/albumPage.html
+++ b/albumPage.html
@@ -52,7 +52,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr onclick="changeTrack1()" id="track1">
+        <tr  id="track1">
           <th scope="row" >1</th>
           <td >
             <h6>20th Century Fox Fanfare</h6>
@@ -75,7 +75,7 @@
           </td>
           <td>0:25</td>
         </tr>
-        <tr onclick="changeTrack2()" id="track2">
+        <tr  id="track2">
           <th scope="row">2</th>
           <td>
             <h6>Somebody To Love</h6>
@@ -98,7 +98,7 @@
           </td>
           <td>4:55</td>
         </tr>
-        <tr onclick="changeTrack3()" id="track3">
+        <tr id="track3">
           <th scope="row">3</th>
           <td>
             <h6>Doing All Right - ...Revisited</h6>
@@ -122,7 +122,7 @@
           </td>
           <td>3:16</td>
         </tr>
-        <tr onclick="changeTrack4()" id="track4">
+        <tr id="track4">
           <th scope="row">4</th>
           <td>
             <h6>Keep Yourself Alive - Live At The Rainbow</h6>
@@ -145,7 +145,7 @@
           </td>
           <td>3:56</td>
         </tr>
-        <tr onclick="changeTrack5()" id="track5">
+        <tr  id="track5">
           <th scope="row">5</th>
           <td>
             <h6>Killer Queen</h6>
@@ -168,7 +168,7 @@
           </td>
           <td>2:59</td>
         </tr>
-        <tr onclick="changeTrack6()" id="track6">
+        <tr  id="track6">
           <th scope="row">6</th>
           <td>
             <h6>Fat Bottomed Girls</h6>
@@ -191,7 +191,7 @@
           </td>
           <td>4:37</td>
         </tr>
-        <tr onclick="changeTrack7()" id="track7">
+        <tr  id="track7">
           <th scope="row">7</th>
           <td>
             <h6>Bohemian Rhapsody</h6>
@@ -214,7 +214,7 @@
           </td>
           <td>5:54</td>
         </tr>
-        <tr onclick="changeTrack8()" id="track8">
+        <tr   id="track8">
           <th scope="row">8</th>
           <td>
             <h6>Now I'm Here - Live At The Hammersmith Odeon</h6>
@@ -237,7 +237,7 @@
           </td>
           <td>4:25</td>
         </tr>
-        <tr onclick="changeTrack9()" id="track9">
+        <tr   id="track9">
           <th scope="row">9</th>
           <td>
             <h6>Crazy Little Thing Called Love</h6>
