Visit the community section
New section added (scroll down to see it)

--- a/support.html
+++ b/support.html
@@ -159,6 +159,12 @@
 
 </div>
 
+<div id="visit">
+    <p id="visitTitle">Visit the Community</p>
+    <p id="visitText">Have questions? Find answers from our worldwide <br> Community of expert fans!</p>
+    <button id="visitButton">Find Answers</button>
+    </div>
+
 
 
     
