added support and connected via dropdown

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ h5.card-title{
       <!----Content-->
       <div class="mr-0 mainPage">
 
-       <!-- user and arrows -->
+       <!-- dropdown and arrows -->
 
 <div class="container-fluid">
   <div class="row d-flex">
@@ -215,6 +215,7 @@ h5.card-title{
           <a class="dropdown-item" href="./album.html">Album</a>
           <a class="dropdown-item" href="./artist-page.html">Artist</a>
           <a class="dropdown-item" href="./loginPage.html">Login</a>
+          <a class="dropdown-item" href="./support.html">Support</a>
         </div>
       </div>
     </div>
