--- a/artist-page.html
+++ b/artist-page.html
@@ -184,6 +184,7 @@ h5{
             <a class="dropdown-item" href="./index.html">Home</a>
             <a class="dropdown-item" href="./album.html">Album</a>
             <a class="dropdown-item" href="./loginPage.html">Login</a>
+            <a class="dropdown-item" href="./support.html">Support</a>
           </div>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#367CDB" class="bi bi-patch-check-fill" viewBox="0 0 16 16">
