--- a/loginPage.html
+++ b/loginPage.html
@@ -72,7 +72,7 @@
 
                 </div>
                 <div class="col-xs-12 col-sm-6">
-                    <button type="button" class="btn login-btn btn-lg btn-block"> log in </button>
+                    <button type="button" class="btn login-btn btn-lg btn-block"> <a style="text-decoration: none; color: white;" href="index.html">log in</a></button>
                 </div>
 
             </div>
