--- a/album.html
+++ b/album.html
@@ -3,6 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Album page</title>
+
+ <!-- FAVICON -->
+ <link rel = "icon" href = 
+ "https://cdn3.iconfinder.com/data/icons/popular-services-brands/512/spotify-512.png" 
+         type = "image/x-icon">
+
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
