--- a/artist-page.html
+++ b/artist-page.html
@@ -3,6 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Artist page</title>
+
+ <!-- FAVICON -->
+ <link rel = "icon" href = 
+ "https://cdn3.iconfinder.com/data/icons/popular-services-brands/512/spotify-512.png" 
+         type = "image/x-icon">
+
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
 <link rel="stylesheet" href="./song-nav.css">
