--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 
   <title>Homepage</title>
 
+  <!-- FAVICON -->
+  <link rel = "icon" href = 
+  "https://cdn3.iconfinder.com/data/icons/popular-services-brands/512/spotify-512.png" 
+          type = "image/x-icon">
+
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
