--- a/albumPage.html
+++ b/albumPage.html
@@ -310,7 +310,7 @@
     <audio id="audio9" src="Queen - Crazy Little Thing Call Love.mp3"></audio>
 
     <script src="albumScript.js"></script>
-
+    <script src="addPlaylist.js"></script>
    
   </body>
 </html>
