--- a/artist-page.html
+++ b/artist-page.html
@@ -87,7 +87,7 @@ h5{
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
   
-                    <a class="nav-link " aria-current="page" href="#">
+                    <a class="nav-link" aria-current="page" href="#" onclick="openModal()" id="open">
                       <i class="bi bi-plus-square"></i>
                       Create playlist
                     </a>
@@ -360,7 +360,7 @@ background: linear-gradient(180deg, rgba(89,89,89,1) 0%, rgba(18,18,18,1) 35%); 
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
       crossorigin="anonymous"></script>
   
-  
+      <script src="addPlaylist.js"></script>
 
 </body>
 </html> 
