--- a/album.html
+++ b/album.html
@@ -117,7 +117,7 @@ td h6 {
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
   
-                    <a class="nav-link " aria-current="page" href="#">
+                    <a class="nav-link" aria-current="page" href="#" onclick="openModal()" id="open">
                       <i class="bi bi-plus-square"></i>
                       Create playlist
                     </a>
