--- a/album.html
+++ b/album.html
@@ -489,7 +489,7 @@ td h6 {
       </tbody>
     </table>
 
-    <div id="playing">
+    <div id="playing" class="pb-5 mb-5">
       <svg id="stopIcon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#121212" class="bi bi-pause-fill" viewBox="0 0 16 16">
         <path d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5zm5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5z"/>
       </svg>
